Setting up initial API connection to backend

--- a/recon-client/src/app/app.component.html
+++ b/recon-client/src/app/app.component.html
@@ -1,11 +1,16 @@
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * The content below * * * * * * * * * * * -->
-<!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
-<!-- * * * * * * * * * * and can be replaced. * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * Delete the template below * * * * * * * * * * -->
-<!-- * * * * * * * to get started with your project! * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
+<!-- <head>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Alice&display=swap"
+    rel="stylesheet"
+  />
+</head>
+
+<nav>
+  <app-nav-bar></app-nav-bar>
+</nav>
+<div class="mainContainer">
+  <router-outlet></router-outlet>
+</div> -->
 
 <style>
   :host {
