Added code to show recommendations on front end and added images

--- a/recon-client/src/app/pages/game-info-page/game-info-page.component.html
+++ b/recon-client/src/app/pages/game-info-page/game-info-page.component.html
@@ -38,19 +38,22 @@
 
     <div class="col-md-3 col-sm-6 mb-4">
       <a href="#">
-            <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+            <h3> {{game.recommendations[0].title }} </h3>
+               <img class="img-fluid" src="../../../assets/{{game.recommendations[0].title}}.jpg" alt="">
           </a>
     </div>
 
     <div class="col-md-3 col-sm-6 mb-4">
       <a href="#">
-            <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+            <h3> {{game.recommendations[1].title }} </h3>
+               <img class="img-fluid" src="../../../assets/{{game.recommendations[1].title}}.jpg" alt="">
           </a>
     </div>
 
     <div class="col-md-3 col-sm-6 mb-4">
       <a href="#">
-            <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+            <h3> {{game.recommendations[2].title }} </h3>
+            <img class="img-fluid" src="../../../assets/{{game.recommendations[2].title}}.jpg" alt="">
           </a>
     </div>
 
