--- a/recon-client/src/app/pages/search-page/search-page.component.html
+++ b/recon-client/src/app/pages/search-page/search-page.component.html
@@ -3,7 +3,7 @@
         <div class="col-lg-12 card-margin">
             <div class="card search-form">
                 <div class="card-body p-0">
-                    <form id="search-form">
+                    <form id="search-form" (submit)="searchGame($event)">
                         <div class="row">
                             <div class="col-12">
                                 <div class="row no-gutters">
@@ -14,10 +14,10 @@
                                         </select>
                                     </div>
                                     <div class="col-lg-8 col-md-6 col-sm-12 p-0">
-                                        <input type="text" placeholder="Search..." class="form-control" id="search" name="search">
+                                        <input type="text" placeholder="Search..." class="form-control" id="searchTerm" name="searchTerm">
                                     </div>
                                     <div class="col-lg-1 col-md-3 col-sm-12 p-0">
-                                        <button type="submit" class="btn btn-base">
+                                        <button type="submit" class="btn btn-base" id="submit">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-search"><circle cx="11" cy="11" r="8"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line></svg>
                                         </button>
                                     </div>
@@ -29,3 +29,12 @@
             </div>
         </div>
     </div>
+</div>
+<div>
+    <!--connects to cart-item.component.html view-->
+    <div class = "row"
+      *ngFor="let games of games"
+      app-game-info-page
+      [games]="game"
+    ></div>
+</div>
