--- a/recon-client/src/app/pages/game-info-page/game-info-page.component.scss
+++ b/recon-client/src/app/pages/game-info-page/game-info-page.component.scss
@@ -158,3 +158,21 @@
     padding: 20px;
   }
 }
+
+.button {
+  background-color: whitesmoke; /* Green */
+  border: 2px solid darkgrey;
+  color: black;
+  padding: 20px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 20px;
+  border-radius: 10px;
+  transition-duration: 0.5s;
+}
+
+.button:hover{
+  background-color: rgb(144, 143, 146);
+  text-decoration: underline;
+}
