--- a/recon-client/src/app/pages/user-page/user-page.component.scss
+++ b/recon-client/src/app/pages/user-page/user-page.component.scss
@@ -1,313 +1,107 @@
-body {
-    background: #16a085;
-    font-family: 'Roboto', sans-serif;
-    padding-top: 40px;
-}
-
-.dashboard {
-    padding: 0 30px;
-}
-
-.dashboard-tabs {
-    background-color: #ecf0f1;
-    
-    padding: 0;
-    
-    border: 0 solid #ecf0f1;
-    border-radius: 5px;
-}
-
-.dashboard-tabs:after {
-    content: '';
-    display: block;
-    clear: both;
-}
-
-.dashboard-tabs > li {
-    list-style: none;
-    display: inline-block;
-    width: 20%;
-    float: none;
-    padding: 0;
-}
-
-.dashboard-tabs > li:first-of-type {
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
-}
-
-.dashboard-tabs > li:last-of-type {
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
-}
-
-.dashboard-tabs > li > a {
-    vertical-align: middle;
-    text-align: center;
-    background-color: #ecf0f1;
-    width: 100%;
-    
-    text-decoration: none;
-    color: #333;
-    
-    border: 0 solid #8e44ad;
-    border-radius: 0;
-    padding: 10px 0 4px 0;
-}
-
-.dashboard-tabs > li.active > a {
-    color: #8e44ad;
-    
-    border-width: 8px 0;
-    padding: 0;
-    margin: -4px 0;
-}
-
-.dashboard-tabs > li:first-of-type > a {
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
-}
-
-.dashboard-tabs > li:last-of-type > a {
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
-}
-
-.dashboard-tabs > li.active > a:before {
-    content: '';
+.header {
     position: relative;
-    border-style: solid;
-    border-width: 6px 6px 0;
-    border-color: #8E44AD transparent;
-    display: block;
-    width: 0;
-    z-index: 1;
-    margin-left: -6px;
-    top: 0;
+    width: 100vw;	
+    height: 600px;	
+}
+.header .center {
+    position: absolute;
+    top: 50%;
     left: 50%;
-}
-
-.dashboard-tabs > li > a .glyphicon {
-    color: #1abc9c;
-    padding-top: 16px;
-    font-size: 40px;
-}
-
-.dashboard .tab-content {
-    margin: 40px 0;
-}
-
-.dashboard .jumbotron {
-    margin-top: 0px;
-    background: #8e44ad;
-    color: #fff;
-    border-radius: 5px 5px 0 0;
-}
-
-.dashboard .jumbotron small {
-    color: #fff;
-}
-
-.dashboard .jumbotron-sm {
-    padding-top: 24px;
-    padding-bottom: 24px;
-}
-
-.help-pane {
-    background: #ecf0f1;
-    border-radius: 5px;
-}
-
-.profile-pane {
-    width: 100%;
-    display: table;
-    border-spacing: 10px;
-}
-
-.profile-pane > div {
-    display: table-row;
-}
-
-.profile-pane > div > div {
-    width: 50%;
-    display: table-cell;
-}
-
-.profile-pane .header {
-    background: #8e44ad;
-    color: #fff;
-    padding: 5px 15px;
-    border-radius: 10px 10px 0 0;
-}
-
-.profile-pane .content {
-    background: #ecf0f1;
-    border-radius: 0 0 10px 10px;
-    padding: 5px 15px;
-}
-
-.profile-pane h4.col {
-    text-align: center;
-    margin-bottom: 40px;
-}
-
-.profile-pane button.col {
-    text-align: center;
-    padding: 0;
-}
-
-.profile-pane .title {
-    margin-top: 0;
-    padding: 10px;
-    border-bottom: 1px solid #aaa;
-}
-
-#supportedCauses {
-    padding: 0;
-}
-
-.cause-info {
-    margin-bottom: 5px;
-    padding: 5px;
-    background: #fff;
-    border-radius: 5px;
-    display: inline-block;
-}
-
-.cause-info a:hover {
-    cursor: pointer;
-}
-
-.cause-info > div:nth-of-type(3) {
-    width: 16.66666666%;
-    float: left;
-}
-
-.cause-info > div:nth-of-type(3) > * {
-    padding: 0 15px;
-    float: right;
-}
-
-.cause-info > div:nth-of-type(3) a > .glyphicon {
-    transition: transform .5s;
-}
-
-.cause-info:not(.expanded) > div:nth-of-type(1) {
-    width: 83.33333333%;
-    float: none;
-    display: inline-block;
-}
-
-.cause-info:not(.expanded) > div:nth-of-type(1) > img {
-    width: 20%;
-    float: left;
-}
-
-.cause-info:not(.expanded) > div:nth-of-type(1) > div {
-    width: 40%;
-    float: left;
-    padding: 0 15px;
-}
-
-.cause-info:not(.expanded) > div:nth-of-type(1) > div:nth-of-type(2):before {
-    content: '';
-    display: inline-block;
-    height: 100%;
-    vertical-align: middle;
-}
-
-.cause-info:not(.expanded) > div:nth-of-type(2) {
-    display: none;
-}
-
-.cause-info.expanded > div:nth-of-type(1) {
     width: 25%;
-    float: left;
+    transform:translate(-50%,-50%);
+    z-index: 15; 
+    padding: 1rem;
+}
+.header .left {
+  position: absolute;
+  top: 0%;
+  left: 0%;
+  width: 50%;
+  height: 100%;
+  z-index: 5; 
+}
+.header .right {
+  position: absolute;
+  top: 0%;
+  left: 50%;
+  width: 50%;
+  height: 100%;
+  z-index: 5; 
+}
+.header .scroll {
+  position: absolute;
+  top: 95%;
+  left: 50%;
+  transform:translate(-50%,-50%);
+  color: #fff;
+  font-size: 1.5rem;
+}
+/*=== Large devices (desktops, 992px and up) ===*/
+@media (min-width: 992px) {
+.header .center {
+  width: 50%;
 }
 
-.cause-info.expanded > div:nth-of-type(1) > img {
-    width: 66.66666667%;
-}
 
-.cause-info.expanded > div:nth-of-type(2) {
-    width: 58.33333333%;
-    float: left;
+/*=== for demo only ===*/
+.demo-title {
+  text-align: left;
+  color: #808080;
 }
+ 
 
-.cause-info.expanded > div:nth-of-type(3) a > .glyphicon {
-    transform: rotate(180deg);
-}
-
-.profile-pane article {
-    background: #fff;
-    border-radius: 5px;
-    padding: 5px;
-    margin-bottom: 40px;
-}
-
-.search-bar {
+.image-grid-cover {
+    width: 100%;
+    background-size: cover;
+    min-height: 180px;
     position: relative;
-    display: table;
-    border-collapse: collapse;
+    margin-bottom: 30px;
+    text-shadow: rgba(0,0,0,.8) 0 1px 0;
+    border-radius: 4px;
 }
-
-.search-bar > input {
+.image-grid-clickbox {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
     display: block;
     width: 100%;
-    height: 34px;
-    padding: 6px 12px;
-    font-size: 14px;
-    line-height: 1.42857143;
-    color: #555;
-    background-color: #fff;
-    background-image: none;
-    border: 1px solid #ccc;
-    border-radius: 4px 0 0 4px;
-    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
-    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
-    -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
-    -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
-    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+    height: 100%;
+    z-index: 20;
+    background: rgba(0,0,0,.45);
 }
-
-.search-select {
-    border-radius: 4px;
-    border-color: #ccc;
-    height: 34px;
-    font-size: 14px;
-    color: #555;
-    background: #fff;
-    padding-right: 0;
+.cover-wrapper {
+    font-size: 18px;
+    text-align: center;
+    display: block;
+    color: #fff;
+    text-shadow: rgba(0,0,0,.8) 0 1px 0;
+    z-index: 21;
+    position: relative;
+    top: 80px;
 }
-
-.reciept-infos {
-    border: 1px solid #000;
-    padding: 0;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    border-radius: 5px;
-    background: #fff;
+a, a:focus, a:hover {
+    text-decoration: none;
+    outline: 0;
 }
-
-.reciept-infos > div:last-of-type {
-    border-bottom: none;
 }
-
-.reciept-infos > div {
-    display: inline-block;
-    border-bottom: 1px solid #000;
-}
-
-.reciept-infos > div > * {
-    float: left;
-}
-
-.reciept-infos > div > img {
-    width: 18%;
-    margin: 1%;
-}
-
-.reciept-infos > div > div {
-    width: 80%;
-    padding: 0 15px;
+@media ( min-width: 768px ) {
+    .grid-divider {
+        position: relative;
+        padding: 0;
+    }
+    .grid-divider>[class*='col-'] {
+        position: static;
+    }
+    .grid-divider>[class*='col-']:nth-child(n+2):before {
+        content: "";
+        border-left: 1px solid #DDD;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+    }
+    .col-padding {
+        padding: 0 15px;
+    }
 }
