Update page routes

--- a/recon-client/src/app/pages/home-page/home-page.component.html
+++ b/recon-client/src/app/pages/home-page/home-page.component.html
@@ -13,7 +13,10 @@
                 </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://localhost:4200/search">Search</a>
+            <a class="nav-link" href="https://localhost:4200/game/search">Search</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://localhost:4200/user/view">Dashboard</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="https://localhost:4200/login">Login/Signup</a>
