--- a/recon-client/src/app/pages/user-page/user-page.component.html
+++ b/recon-client/src/app/pages/user-page/user-page.component.html
@@ -1,20 +1,25 @@
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+ <!--<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+ <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+ <script src="//code.jquery.com/jquery-1.11.1.min.js"></script> -->
 
 <!DOCTYPE html>
 <html lang="en">
+<!-- Removed css script references so the header would be normalized throughout different webpages.     
     <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    
     </head>
-
+-->
     <body>
         <div class="container">
             <div class="demo-title">
-                <h1 class="display-1">Username</h1>
+                <!-- Added a few linebreaks to seperate the content from the header bar.-->
+                <br>
+                <br>
+                <h5 class="display-1">Welcome, Username.</h5>
             </div>
         </div>
         <div class="container">
