--- a/recon-client/src/app/app.component.html
+++ b/recon-client/src/app/app.component.html
@@ -1,3 +1,32 @@
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+  <div class="container">
+    <a class="navbar-brand" href="#">Recon</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+    <div class="collapse navbar-collapse" id="navbarResponsive">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home
+                <span class="sr-only">(current)</span>
+              </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://localhost:4200/game/search">Search</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://localhost:4200/user/view">Dashboard</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://localhost:4200/login">Login/Signup</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+<br>
+<br>
+
 <div class="mainContainer">
   <router-outlet></router-outlet>
 </div> 
