Added user login, registration, backend service, etc. Just need token stuff now

--- a/recon-client/src/app/app.component.html
+++ b/recon-client/src/app/app.component.html
@@ -18,7 +18,10 @@
           <a class="nav-link" href="https://localhost:4200/user/view">Dashboard</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="https://localhost:4200/login">Login/Signup</a>
+          <a class="nav-link" href="https://localhost:4200/login">Login</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://localhost:4200/register">Register</a>
         </li>
       </ul>
     </div>
