--- a/recon-client/src/app/pages/register-page/register-page.component.html
+++ b/recon-client/src/app/pages/register-page/register-page.component.html
@@ -6,17 +6,27 @@
           <div class="container">
             <div class="row">
               <div class="col-md-9 col-lg-8 mx-auto">
-                <h3 class="login-heading mb-4">Registration!</h3>
+                <h3 class="login-heading mb-4">Registration! Please check the box below to keep data private.</h3>
                 <!-- Login form  -->
                 <form [formGroup]="form" (submit) = "register()">
                   <div class="form-label-group">
                     <input formControlName = "email" type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
                     <label for="inputEmail">Email address</label>
                   </div>
+
+                  <div class="form-label-group">
+                    <input formControlName = "username" type="username" id="inputUsername" class="form-control" placeholder="Username" required>
+                    <label for="inputUsername">Username</label>
+                  </div>
   
                   <div class="form-label-group">
                     <input formControlName = "password" type="password" id="inputPassword" class="form-control" placeholder="Password" required>
                     <label for="inputPassword">Password</label>
+                  </div>
+
+                  <div class="form-label-group">
+                    <input formControlName = "privateinfo" type="checkbox" id="inputprivateinfo" class="form-control" required>
+                    <label for="inputPrivateInfo">Keep Data Private?</label>
                   </div>
   
                   <button class="btn btn-lg btn-primary btn-block btn-login text-uppercase font-weight-bold mb-2" type="submit">Register</button>
