--- a/recon-client/src/app/pages/home-page/home-page.component.html
+++ b/recon-client/src/app/pages/home-page/home-page.component.html
@@ -24,6 +24,9 @@
           <li class="nav-item">
             <a class="nav-link" href="https://localhost:4200/register">Register</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://localhost:4200/logout">Logout</a>
+          </li>
         </ul>
       </div>
     </div>
